--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -54,7 +54,7 @@ $terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
 $browser = firefox
-$cursor = hyprctl setcursor Breeze_Dark 24
+$cursor = hyprctl setcursor breeze_cursors 24
 
 #################
 ### AUTOSTART ###
@@ -68,16 +68,13 @@ $cursor = hyprctl setcursor Breeze_Dark 24
 exec-once = waybar & swww-daemon
 exec-once = $cursor
 
-
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
-
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
+env = XCURSOR_THEME=breeze_cursors
 
 ###################
 ### PERMISSIONS ###
@@ -154,6 +151,15 @@ animations {
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
 
+    bezier = expressiveFastSpatial, 0.42, 1.67, 0.21, 0.90
+    bezier = expressiveSlowSpatial, 0.39, 1.29, 0.35, 0.98
+    bezier = expressiveDefaultSpatial, 0.38, 1.21, 0.22, 1.00
+    bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
+    bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
+    bezier = standardDecel, 0, 0, 0, 1
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.52, 0.03, 0.72, 0
+	
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
     bezier = linear,0,0,1,1
@@ -173,9 +179,11 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    # workspaces
+    animation = workspaces, 1, 7, menu_decel, slide
+    ## specialWorkspace
+    animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
+    animation = specialWorkspaceOut, 1, 1.2, emphasizedAccel, slidevert
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
@@ -224,12 +232,17 @@ input {
 
     touchpad {
         natural_scroll = false
+        disable_while_typing = true
+        clickfinger_behavior = true
+        middle_button_emulation = true
+        tap-to-click = true
+        scroll_factor = 1.0
     }
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    # workspace_swipe = false
+	# workspace_swipe = true
 }
 
 # Example per-device config
