--- a/configs/fastfetch/config.jsonc
+++ b/configs/fastfetch/config.jsonc
@@ -1,11 +1,14 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-    "type": "small",
-        "padding": {
-            "top": 3
-        }
-    },
+      "source": "~/.config/fastfetch/nyarch.png",
+      "height": 12,
+      "position": "left",
+      "padding": {
+        "top": 1,
+        "bottom": 1
+    }
+  },
     "display": {
         "separator": "  "
     },
