--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -8,7 +8,7 @@
       "hyprland/workspaces",
     ],
     "modules-center": [
-      "hyprland/window"
+      "tray"
     ],
     "modules-right": [
     "hyprland/language",
