--- a/configs/fastfetch/config.jsonc
+++ b/configs/fastfetch/config.jsonc
@@ -24,7 +24,7 @@
         "title",
         {
     "type": "custom",
-    "format": "\u001b[34mOS\u001b[0m \u001b[37mNyarch linux\u001b[0m"
+    "format": "\u001b[34mOS\u001b[0m \u001b[37mNyarch Linux\u001b[0m"
         },
         {
             "type": "kernel",
