--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -54,7 +54,7 @@ $terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
 $browser = firefox
-$cursor = hyprctl setcursor breeze_cursors 24
+$cursor = hyprctl setcursor Moga-Neon-Blue 24
 
 #################
 ### AUTOSTART ###
