--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -324,6 +324,8 @@ bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
 bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
 bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
 bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
